# azure-blob-sample

backend/: README.md  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
